# LynxProject

./: .env.example  .gitignore  APPLY_FIXES_TO_DESKTOP.ps1  AUDIT_REPORT.md  INTEGRATIONS.md  PRODUCTION.md  PRODUCTION_READINESS.md  README.md  docker-compose.yml  launch_lynx_backend.sh  launch_lynx_frontend.sh
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  .npmrc  Dockerfile  README.md  env.example  notas.txt  package-lock.json  package.json  tsconfig.json
backend/migrations/: 001_user_table.sql
backend/prisma/: schema.prisma  seed.ts
backend/src/: App.tsx  auth.ts  economy.ts  email.ts  index.css  instrument.ts  persistence.ts  server.ts  settlement.ts  state.ts  types.ts
backend/tests/: api.test.ts
cripto/: .gitignore  Anchor.toml  CRYPTO_GUIDE.md  Cargo.toml  MAINNET_CHECKLIST.md  README.md  README_DEPLOY.md  deploy_devnet.ps1  package-lock.json  package.json
cripto/admin-panel/: .env.example  .env.local  README.md  middleware.ts  package-lock.json  package.json  run-local.sh  tsconfig.json
cripto/programs/lynx_project/: Cargo.toml
cripto/programs/lynx_project/src/: constants.rs  error.rs  lib.rs  state.rs
cripto/programs/lynx_project/tests/: test_initialize.rs
documentacion/: LynxProtocol_Master_v1.docx
frontend/: .dockerignore  .env.example  Dockerfile  README.md  TOAST_SYSTEM_README.md  empty-module.js  index.html  metadata.json  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
nginx/: init-certs.sh  nginx.conf
scripts/: dev_stack.sh  e2e_auth_test.ps1  e2e_smoke.ps1  smoke_dev.sh
(+207 files in other folders)
