[package]
name = "lynx_project"
version = "0.1.0"
description = "Lynx Protocol - Prediction markets on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lynx_project"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", default-features = false, features = ["mint", "token"] }
